Cleaned up script injections and added an options page where you can set your pushbullet api key and set devices.

--- a/manifest.json
+++ b/manifest.json
@@ -1,15 +1,14 @@
 {
   "name": "I want nexus",
   "description": "I want nexus",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "content_scripts": [
     {
         "matches": ["https://play.google.com/store/devices/*"],
-        "js": ["insertion.js"]
+        "js": ["jquery.min.js","pushbullet.js","iwantnexus.js"]
     }
   ],
-  "web_accessible_resources": [
-      "iwantnexus.js"
-  ],
+  "options_page": "options.html",
+  "permissions": ["storage"],
   "manifest_version": 2
 }
